Fixed bug #60222 (time_nanosleep() does validate input params).